objects/LS_CO__CO_Tag__c.object
<CustomObject>
    <fields>
        <fullName>LS_CO__ContentIds10__c</fullName>
        <label>ContentIds10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LS_CO__ContentIds2__c</fullName>
        <label>ContentIds2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LS_CO__ContentIds3__c</fullName>
        <label>ContentIds3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>CO_Tag</label>
    <nameField>
        <label>Tag</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CO_Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>